remove sensitive information from settings print statements and update notebook for contract insertion

--- a/src/transform/insert_contract.ipynb
+++ b/src/transform/insert_contract.ipynb
@@ -460,6 +460,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Insere Contrato"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -563,85 +570,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>idClienteIXC</th>\n",
-       "      <th>filial_id</th>\n",
-       "      <th>idCidade</th>\n",
-       "      <th>Endereco</th>\n",
-       "      <th>Numero</th>\n",
-       "      <th>Bairro</th>\n",
-       "      <th>Cep</th>\n",
-       "      <th>idPlanoIXC</th>\n",
-       "      <th>idVencimentoIXC</th>\n",
-       "      <th>Login</th>\n",
-       "      <th>Senha</th>\n",
-       "      <th>idContratoIXC</th>\n",
-       "      <th>statusInsercao</th>\n",
-       "      <th>logRetorno</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>117695</td>\n",
-       "      <td>35</td>\n",
-       "      <td>1659</td>\n",
-       "      <td>Vila São Sebastião</td>\n",
-       "      <td>SN</td>\n",
-       "      <td>Centro</td>\n",
-       "      <td>57830-000</td>\n",
-       "      <td>6824</td>\n",
-       "      <td>25</td>\n",
-       "      <td>teste1@radios.com</td>\n",
-       "      <td>peixoto</td>\n",
-       "      <td>154045</td>\n",
-       "      <td>sucesso</td>\n",
-       "      <td>{'type': 'success', 'message': 'Registro inser...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  idClienteIXC filial_id idCidade            Endereco Numero  Bairro  \\\n",
-       "0       117695        35     1659  Vila São Sebastião     SN  Centro   \n",
-       "\n",
-       "         Cep idPlanoIXC idVencimentoIXC              Login    Senha  \\\n",
-       "0  57830-000       6824              25  teste1@radios.com  peixoto   \n",
-       "\n",
-       "  idContratoIXC statusInsercao  \\\n",
-       "0        154045        sucesso   \n",
-       "\n",
-       "                                          logRetorno  \n",
-       "0  {'type': 'success', 'message': 'Registro inser...  "
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mdf\u001b[49m\n",
+      "\u001b[31mNameError\u001b[39m: name 'df' is not defined"
+     ]
     }
    ],
    "source": [
