--- a/src/transform/insert_login.ipynb
+++ b/src/transform/insert_login.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,16 +49,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'20250319_221022'"
+       "'20250319_224710'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
        "0  {'type': 'success', 'message': 'Registro inser...  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,21 +176,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'executa_query' from 'config.settings' (c:\\Users\\wesll\\import_data_ixc\\config\\settings.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      5\u001b[39m path_raiz = os.path.abspath(os.path.join(\u001b[33m\"\u001b[39m\u001b[33m..\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33m..\u001b[39m\u001b[33m\"\u001b[39m))\n\u001b[32m      6\u001b[39m sys.path.append(path_raiz)\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mconfig\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01msettings\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m executa_query\n",
-      "\u001b[31mImportError\u001b[39m: cannot import name 'executa_query' from 'config.settings' (c:\\Users\\wesll\\import_data_ixc\\config\\settings.py)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unnamed: 0         0\n",
+      "idClienteIXC       0\n",
+      "filial_id          0\n",
+      "idCidade           0\n",
+      "Endereco           0\n",
+      "Numero             0\n",
+      "Bairro             0\n",
+      "Cep                0\n",
+      "idPlanoIXC         0\n",
+      "idVencimentoIXC    0\n",
+      "Login              0\n",
+      "Senha              0\n",
+      "idContratoIXC      0\n",
+      "statusInsercao     0\n",
+      "logRetorno         0\n",
+      "dtype: int64\n"
      ]
     }
    ],
+   "source": [
+    "print(df_contrato.isnull().sum())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Adiciona o idGrupo ao dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
@@ -199,7 +226,140 @@
     "path_raiz = os.path.abspath(os.path.join(\"..\", \"..\"))\n",
     "sys.path.append(path_raiz)\n",
     "\n",
-    "from config.settings import executa_query"
+    "from config.database_select import executa_query"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Cria função somente para isso"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Função para adicionar a coluna 'idGrupo' ao DataFrame\n",
+    "def add_idGrupo_to_df_contrato(df_contrato):\n",
+    "    idGrupo_list = []\n",
+    "    for _, row in df_contrato.iterrows():\n",
+    "        idPlanoIXC = row['idPlanoIXC']\n",
+    "        # Monta a query utilizando o idPlanoIXC da linha\n",
+    "        query = f\"\"\"\n",
+    "        SELECT\n",
+    "            vdcp.id_plano\n",
+    "        FROM\n",
+    "            vd_contratos vdc\n",
+    "            LEFT JOIN vd_contratos_produtos vdcp ON vdc.id = vdcp.id_vd_contrato AND vdcp.tipo = \"I\"\n",
+    "        WHERE \n",
+    "            vdc.id = {idPlanoIXC}\n",
+    "        \"\"\"\n",
+    "        resultado = executa_query(query)\n",
+    "        # Caso a query retorne resultados, usamos o primeiro valor\n",
+    "        if resultado and len(resultado) > 0:\n",
+    "            id_plano = resultado[0][0]\n",
+    "        else:\n",
+    "            id_plano = None\n",
+    "        idGrupo_list.append(id_plano)\n",
+    "    \n",
+    "    # Cria a nova coluna 'idGrupo' no DataFrame\n",
+    "    df_contrato['idGrupo'] = idGrupo_list\n",
+    "    return df_contrato"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>idClienteIXC</th>\n",
+       "      <th>filial_id</th>\n",
+       "      <th>idCidade</th>\n",
+       "      <th>Endereco</th>\n",
+       "      <th>Numero</th>\n",
+       "      <th>Bairro</th>\n",
+       "      <th>Cep</th>\n",
+       "      <th>idPlanoIXC</th>\n",
+       "      <th>idVencimentoIXC</th>\n",
+       "      <th>Login</th>\n",
+       "      <th>Senha</th>\n",
+       "      <th>idContratoIXC</th>\n",
+       "      <th>statusInsercao</th>\n",
+       "      <th>logRetorno</th>\n",
+       "      <th>idGrupo</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>117695</td>\n",
+       "      <td>35</td>\n",
+       "      <td>1659</td>\n",
+       "      <td>Vila São Sebastião</td>\n",
+       "      <td>SN</td>\n",
+       "      <td>Centro</td>\n",
+       "      <td>57830-000</td>\n",
+       "      <td>6824</td>\n",
+       "      <td>25</td>\n",
+       "      <td>teste1@radios.com</td>\n",
+       "      <td>peixoto</td>\n",
+       "      <td>154045</td>\n",
+       "      <td>sucesso</td>\n",
+       "      <td>{'type': 'success', 'message': 'Registro inser...</td>\n",
+       "      <td>6668</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Unnamed: 0 idClienteIXC filial_id idCidade            Endereco Numero  \\\n",
+       "0          0       117695        35     1659  Vila São Sebastião     SN   \n",
+       "\n",
+       "   Bairro        Cep idPlanoIXC idVencimentoIXC              Login    Senha  \\\n",
+       "0  Centro  57830-000       6824              25  teste1@radios.com  peixoto   \n",
+       "\n",
+       "  idContratoIXC statusInsercao  \\\n",
+       "0        154045        sucesso   \n",
+       "\n",
+       "                                          logRetorno  idGrupo  \n",
+       "0  {'type': 'success', 'message': 'Registro inser...     6668  "
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_contrato = add_idGrupo_to_df_contrato(df_contrato)\n",
+    "df_contrato"
    ]
   },
   {
@@ -211,7 +371,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# inserir_radusuarios(\n",
+    "#     id_cliente=\"117695\",\n",
+    "#     id_contrato=\"154045\",\n",
+    "#     id_grupo=\"6668\",\n",
+    "#     login=\"weslley123ss\",\n",
+    "#     senha=\"testesenhappoe\",\n",
+    "# )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Insere Login"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -219,28 +401,173 @@
      "output_type": "stream",
      "text": [
       "200 OK\n",
-      "b'{\"type\":\"success\",\"message\":\"Registro inserido com sucesso!\",\"id\":\"181279\",\"atualiza_campos\":[{\"tipo\":\"s\",\"campo\":\"online\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"id_cliente\",\"valor\":\"117695\"}]}'\n"
+      "b'{\"type\":\"success\",\"message\":\"Registro inserido com sucesso!\",\"id\":\"181280\",\"atualiza_campos\":[{\"tipo\":\"s\",\"campo\":\"online\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"id_cliente\",\"valor\":\"117695\"}]}'\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "# Faça uma cópia do DataFrame para evitar o SettingWithCopyWarning\n",
+    "df_contrato = df_contrato.copy()\n",
+    "\n",
+    "# Crie as colunas adicionais para registrar o retorno da API (inicialmente vazias)\n",
+    "df_contrato.loc[:, \"idRadUsuarios\"] = None\n",
+    "df_contrato.loc[:, \"statusInsercaoRad\"] = None\n",
+    "df_contrato.loc[:, \"logRetornoRad\"] = None\n",
+    "\n",
+    "for idx, row in df_contrato.iterrows():\n",
+    "    # Mapeamento dos dados do DataFrame para os parâmetros da função inserir_radusuarios.\n",
+    "    # Certifique-se de que os campos obrigatórios estejam preenchidos.\n",
+    "    id_cliente = row[\"idClienteIXC\"]      # Valor do cliente\n",
+    "    id_contrato = row[\"idContratoIXC\"]      # Deve vir de uma inserção anterior\n",
+    "    # Como o id_grupo não existe no DataFrame, definimos um valor fixo ou calculado conforme sua regra\n",
+    "    id_grupo = [row[\"idGrupo\"]]  # Exemplo: \"6668\"\n",
+    "    login = row[\"Login\"]\n",
+    "    senha = row[\"Senha\"]\n",
+    "    # Se necessário, pode-se ajustar senha_md5 ou outros parâmetros, mas aqui usaremos os defaults da função.\n",
+    "\n",
+    "    # Chama a função inserir_radusuarios com os parâmetros mapeados\n",
+    "    response = inserir_radusuarios(\n",
+    "        id_cliente=id_cliente,\n",
+    "        id_contrato=id_contrato,\n",
+    "        id_grupo=id_grupo,\n",
+    "        login=login,\n",
+    "        senha=senha\n",
+    "        # Os demais parâmetros serão utilizados com seus valores default definidos na função.\n",
+    "    )\n",
+    "\n",
+    "    status_code = response.status_code\n",
+    "    content = response.content  # bytes\n",
+    "\n",
+    "    # Faz o parse do JSON retornado\n",
+    "    json_resp = json.loads(content.decode(\"utf-8\", errors=\"replace\"))\n",
+    "\n",
+    "    if status_code == 200 and json_resp.get(\"type\") == \"success\":\n",
+    "        # Sucesso: captura o \"id\" do usuário inserido\n",
+    "        usuario_id = json_resp.get(\"id\")  # Exemplo: \"154036\"\n",
+    "        df_contrato.at[idx, \"idRadusuarios\"] = usuario_id\n",
+    "        df_contrato.at[idx, \"statusInsercaoRad\"] = \"sucesso\"\n",
+    "        df_contrato.at[idx, \"logRetornoRad\"] = json_resp\n",
+    "    else:\n",
+    "        # Em caso de falha: registra os logs e garante que idRadusuarios fique como None\n",
+    "        df_contrato.at[idx, \"idRadusuarios\"] = None\n",
+    "        df_contrato.at[idx, \"statusInsercaoRad\"] = \"falha\"\n",
+    "        df_contrato.at[idx, \"logRetornoRad\"] = json_resp\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Retorno"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_contrato.to_excel(source_output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>idClienteIXC</th>\n",
+       "      <th>filial_id</th>\n",
+       "      <th>idCidade</th>\n",
+       "      <th>Endereco</th>\n",
+       "      <th>Numero</th>\n",
+       "      <th>Bairro</th>\n",
+       "      <th>Cep</th>\n",
+       "      <th>idPlanoIXC</th>\n",
+       "      <th>idVencimentoIXC</th>\n",
+       "      <th>Login</th>\n",
+       "      <th>Senha</th>\n",
+       "      <th>idContratoIXC</th>\n",
+       "      <th>statusInsercao</th>\n",
+       "      <th>logRetorno</th>\n",
+       "      <th>idGrupo</th>\n",
+       "      <th>idRadusuarios</th>\n",
+       "      <th>statusInsercaoRad</th>\n",
+       "      <th>logRetornoRad</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>117695</td>\n",
+       "      <td>35</td>\n",
+       "      <td>1659</td>\n",
+       "      <td>Vila São Sebastião</td>\n",
+       "      <td>SN</td>\n",
+       "      <td>Centro</td>\n",
+       "      <td>57830-000</td>\n",
+       "      <td>6824</td>\n",
+       "      <td>25</td>\n",
+       "      <td>teste1@radios.com</td>\n",
+       "      <td>peixoto</td>\n",
+       "      <td>154045</td>\n",
+       "      <td>sucesso</td>\n",
+       "      <td>{'type': 'success', 'message': 'Registro inser...</td>\n",
+       "      <td>6668</td>\n",
+       "      <td>181280</td>\n",
+       "      <td>sucesso</td>\n",
+       "      <td>{'type': 'success', 'message': 'Registro inser...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "<Response [200]>"
+       "  Unnamed: 0 idClienteIXC filial_id idCidade            Endereco Numero  \\\n",
+       "0          0       117695        35     1659  Vila São Sebastião     SN   \n",
+       "\n",
+       "   Bairro        Cep idPlanoIXC idVencimentoIXC              Login    Senha  \\\n",
+       "0  Centro  57830-000       6824              25  teste1@radios.com  peixoto   \n",
+       "\n",
+       "  idContratoIXC statusInsercao  \\\n",
+       "0        154045        sucesso   \n",
+       "\n",
+       "                                          logRetorno  idGrupo idRadusuarios  \\\n",
+       "0  {'type': 'success', 'message': 'Registro inser...     6668        181280   \n",
+       "\n",
+       "  statusInsercaoRad                                      logRetornoRad  \n",
+       "0           sucesso  {'type': 'success', 'message': 'Registro inser...  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "inserir_radusuarios(\n",
-    "    id_cliente=\"117695\",\n",
-    "    id_contrato=\"154045\",\n",
-    "    id_grupo=\"6668\",\n",
-    "    login=\"weslley123ss\",\n",
-    "    senha=\"testesenhappoe\",\n",
-    ")"
+    "df_contrato"
    ]
   }
  ],
