add address fields to inserir_radusuarios function and update related notebook

--- a/src/transform/insert_login.ipynb
+++ b/src/transform/insert_login.ipynb
@@ -423,6 +423,11 @@
     "    id_grupo = [row[\"idGrupo\"]]  # Exemplo: \"6668\"\n",
     "    login = row[\"Login\"]\n",
     "    senha = row[\"Senha\"]\n",
+    "    cidade = row[\"idCidade\"]\n",
+    "    endereco = row[\"Endereco\"]\n",
+    "    numero = row[\"Numero\"]\n",
+    "    bairro = row[\"Bairro\"]\n",
+    "    cep = row[\"Cep\"]\n",
     "    # Se necessário, pode-se ajustar senha_md5 ou outros parâmetros, mas aqui usaremos os defaults da função.\n",
     "\n",
     "    # Chama a função inserir_radusuarios com os parâmetros mapeados\n",
@@ -431,7 +436,12 @@
     "        id_contrato=id_contrato,\n",
     "        id_grupo=id_grupo,\n",
     "        login=login,\n",
-    "        senha=senha\n",
+    "        senha=senha,\n",
+    "        cep=cep,\n",
+    "        endereco=endereco,\n",
+    "        numero=numero,\n",
+    "        bairro=bairro,\n",
+    "        cidade=cidade,\n",
     "        # Os demais parâmetros serão utilizados com seus valores default definidos na função.\n",
     "    )\n",
     "\n",
