update execution counts in insert_login notebook and fix TypeError in inserir_radusuarios function

--- a/src/transform/insert_login.ipynb
+++ b/src/transform/insert_login.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,16 +49,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'20250319_224710'"
+       "'20250319_225210'"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
        "0  {'type': 'success', 'message': 'Registro inser...  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
        "0  {'type': 'success', 'message': 'Registro inser...     6668  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,15 +393,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "200 OK\n",
-      "b'{\"type\":\"success\",\"message\":\"Registro inserido com sucesso!\",\"id\":\"181280\",\"atualiza_campos\":[{\"tipo\":\"s\",\"campo\":\"online\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"id_cliente\",\"valor\":\"117695\"}]}'\n"
+     "ename": "TypeError",
+     "evalue": "inserir_radusuarios() got an unexpected keyword argument 'cep'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[82]\u001b[39m\u001b[32m, line 26\u001b[39m\n\u001b[32m     22\u001b[39m cep = row[\u001b[33m\"\u001b[39m\u001b[33mCep\u001b[39m\u001b[33m\"\u001b[39m]\n\u001b[32m     23\u001b[39m \u001b[38;5;66;03m# Se necessário, pode-se ajustar senha_md5 ou outros parâmetros, mas aqui usaremos os defaults da função.\u001b[39;00m\n\u001b[32m     24\u001b[39m \n\u001b[32m     25\u001b[39m \u001b[38;5;66;03m# Chama a função inserir_radusuarios com os parâmetros mapeados\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m26\u001b[39m response = \u001b[43minserir_radusuarios\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m     27\u001b[39m \u001b[43m    \u001b[49m\u001b[43mid_cliente\u001b[49m\u001b[43m=\u001b[49m\u001b[43mid_cliente\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     28\u001b[39m \u001b[43m    \u001b[49m\u001b[43mid_contrato\u001b[49m\u001b[43m=\u001b[49m\u001b[43mid_contrato\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     29\u001b[39m \u001b[43m    \u001b[49m\u001b[43mid_grupo\u001b[49m\u001b[43m=\u001b[49m\u001b[43mid_grupo\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     30\u001b[39m \u001b[43m    \u001b[49m\u001b[43mlogin\u001b[49m\u001b[43m=\u001b[49m\u001b[43mlogin\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     31\u001b[39m \u001b[43m    \u001b[49m\u001b[43msenha\u001b[49m\u001b[43m=\u001b[49m\u001b[43msenha\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     32\u001b[39m \u001b[43m    \u001b[49m\u001b[43mcep\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcep\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     33\u001b[39m \u001b[43m    \u001b[49m\u001b[43mendereco\u001b[49m\u001b[43m=\u001b[49m\u001b[43mendereco\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     34\u001b[39m \u001b[43m    \u001b[49m\u001b[43mnumero\u001b[49m\u001b[43m=\u001b[49m\u001b[43mnumero\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     35\u001b[39m \u001b[43m    \u001b[49m\u001b[43mbairro\u001b[49m\u001b[43m=\u001b[49m\u001b[43mbairro\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     36\u001b[39m \u001b[43m    \u001b[49m\u001b[43mcidade\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcidade\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     37\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;66;43;03m# Os demais parâmetros serão utilizados com seus valores default definidos na função.\u001b[39;49;00m\n\u001b[32m     38\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     40\u001b[39m status_code = response.status_code\n\u001b[32m     41\u001b[39m content = response.content  \u001b[38;5;66;03m# bytes\u001b[39;00m\n",
+      "\u001b[31mTypeError\u001b[39m: inserir_radusuarios() got an unexpected keyword argument 'cep'"
      ]
     }
    ],
@@ -473,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
